--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack",
+    "build-dev": "webpack",
+    "build-prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^7.1.5",
     "css-loader": "^3.6.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^1.2.1",
